<resources>
    <!--    <string name="app_name">Leaarn_Kotlin_For_Android</string>-->
    <string name="app_name">Outfit Mania</string>
    <string-array name="genderEntries">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me_next_time">Remember me next time</string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="forget_password_ndont_t_worry_we_just_need_your_associated_email_nwith_this_account_to_send_you_an_reset_password_email">Forget Password? \ndont\'t worry we just need your associated Email \nwith this account to send you an reset password Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="discount">Discount</string>
    <string name="grab_the_offer_today">Grab the offer Today</string>
</resources>