<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navFav"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navChat"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/chat"
        app:showAsAction="always" />
    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>